# ResearchSSH-Next

./: .clang-format  .gitignore  .rustfmt.toml  CMakeLists.txt  CMakePresets.json  README.md
app/cpp/: AppController.cpp  AppController.h  CodeHighlighter.cpp  CodeHighlighter.h  CredentialStore.cpp  CredentialStore.h  EditorViewModel.cpp  EditorViewModel.h  RemoteFileTreeModel.cpp  RemoteFileTreeModel.h  RustCoreBridge.cpp  RustCoreBridge.h  ServerListModel.cpp  ServerListModel.h  TerminalViewModel.cpp  TerminalViewModel.h  main.cpp
app/qml/: Main.qml  Theme.qml
app/qml/components/: CodeEditorPane.qml  ConnectDialog.qml  HostKeyDialog.qml  PackagePane.qml  PanelHeader.qml  RemoteFilesPane.qml  ServerPane.qml  StatusDot.qml  StatusPane.qml  StyledButton.qml  TerminalPane.qml  WorkspacePane.qml
app/windows/: app.rc
cmake/: RustCore.cmake
docs/: architecture.md  file-management.md
docs/superpowers/plans/: 2026-06-24-public-key-auth.md
docs/superpowers/specs/: 2026-06-24-public-key-auth-design.md
rust-core/: Cargo.toml  build.rs  cbindgen.toml
rust-core/include/: research_ssh_core.h
rust-core/src/: event.rs  ffi.rs  fs.rs  lib.rs  provider.rs  runtime.rs  secret.rs  session.rs  task.rs
rust-core/src/providers/: mock.rs  mod.rs  russh.rs
rust-core/tests/: ffi_smoke.rs
tests/: CMakeLists.txt
